# voltorb-flip

./: .gitignore  .travis.yml  README.md  voltorb-flip.cabal
src/: Axis.hs  Board.hs  BoardParser.hs  Clue.hs  Clues.hs  Coordinate.hs  Game.hs  Inferences.hs  Lib.hs  PartialBoard.hs  PartialBoardParser.hs  PartialGame.hs  Position.hs  Tile.hs
test/: ArbitraryInstances.hs  ArrayGenerators.hs  AxisSpec.hs  BoardParserSpec.hs  BoardSpec.hs  ClueSpec.hs  CluesSpec.hs  CoordinateSpec.hs  GameSpec.hs  InferencesSpec.hs  LibSpec.hs  PartialBoardParserSpec.hs  PartialBoardSpec.hs  PartialGameSpec.hs  PositionSpec.hs  TileSpec.hs
