name:                voltorb-flip
version:             0.1.0.0
synopsis:            Simulator and solver for Voltorb Flip
-- description:
homepage:            https://github.com/jameshales/voltorb-flip#readme
license:             BSD3
license-file:        LICENSE
author:              James Hales
maintainer:          james@jameshales.org
copyright:           2017 James Hales
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Board
                     , Coordinate
                     , Position
                     , Tile
  build-depends:       base >= 4.7 && < 5
                     , array >= 0.5.0.0
  default-language:    Haskell2010
  ghc-options:         -Wall

executable voltorb-flip-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , voltorb-flip
  default-language:    Haskell2010

test-suite voltorb-flip-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , QuickCheck == 2.*
                     , array >= 0.5.0.0
                     , hspec == 2.*
                     , voltorb-flip
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       ArbitraryInstances
                     , BoardSpec
                     , CoordinateSpec
                     , PositionSpec
                     , TileSpec

source-repository head
  type:     git
  location: https://github.com/jameshales/voltorb-flip
